[package]
name = "trim_lines"
version = "0.1.1"
authors = ["neil"]
description = "An extremely simple and tiny library which provides an iterator over the lines of a string, trimmed of whitespace. It is a simple wrapper around the Lines iterator in std::str which trims the whitespace from each line."
license = "ISC"
repository = "https://github.com/nlburgin/trim_lines"

[dependencies]
